src/main/resources/Krakatau-master/tests/assembler/bad/invalidarraycode.j
.class public whocares
.super java/lang/Object

.method public static print : (F)V
    .code stack 10 locals 10
        newarray nop
        return
    .end code
.end method
.end class
